Cut over to mirrored XMTP rooms
